--- a/src/styles.css
+++ b/src/styles.css
@@ -373,11 +373,27 @@ li.ProseMirror-selectednode:after {
 .blame-committed {
   background-color: rgba(57, 255, 20, 0.5);
 }
-
 .blame-uncommitted {
   background-color: rgba(255, 218, 20, 0.5);
 }
-
 .blame-focused {
   background-color: rgba(13, 213, 252, 0.5);
+}
+
+.blame-committed-point,
+.blame-focused-point {
+  position: relative;
+}
+.blame-committed-point::after,
+.blame-focused-point::after {
+  position: absolute;
+  left: -2.5px;
+  display: inline-block;
+  content: " ";
+  border: 1px solid rgba(255, 0, 0);
+  transform: rotate(45deg);
+  border-top: none;
+  border-left: none;
+  width: 5px;
+  height: 5px;
 }
